<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btnAgregarDireccion"
        android:orderInCategory="100"
        android:title="@string/direccion"
        app:showAsAction="withText" />

    <item
        android:id="@+id/btnAgregarTelefono"
        android:orderInCategory="100"
        android:title="@string/telefono"
        app:showAsAction="withText" />

    <item
        android:id="@+id/btnAgregarCelular"
        android:orderInCategory="100"
        android:title="@string/celular"
        app:showAsAction="withText" />

    <item
        android:id="@+id/btnAgregarEmail"
        android:orderInCategory="100"
        android:title="@string/email"
        app:showAsAction="withText" />

</menu>