<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btnRecaudar"
        android:orderInCategory="100"
        android:title="@string/recaudar"
        android:icon="@drawable/ic_action_recaudar"
        app:showAsAction="always" />

    <item
        android:id="@+id/btnInformacion"
        android:orderInCategory="100"
        android:title="@string/informacion"
        android:icon="@drawable/ic_action_informacion"
        app:showAsAction="always" />

    <item
        android:id="@+id/btnGestiones"
        android:orderInCategory="100"
        android:title="@string/gestiones"
        android:icon="@drawable/ic_action_gestiones"
        app:showAsAction="always" />

    <item
        android:id="@+id/btnCierre"
        android:orderInCategory="100"
        android:title="@string/agregar_cierre"
        android:icon="@drawable/ic_action_agregar"
        app:showAsAction="always" />

</menu>