<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_ver_cliente"
        android:orderInCategory="100"
        android:title="@string/detalle_del_cliente"
        android:icon="@drawable/ic_action_cliente"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_info_cliente"
        android:orderInCategory="100"
        android:title="@string/informacion"
        android:icon="@drawable/ic_action_informacion"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_gestiones"
        android:orderInCategory="100"
        android:title="@string/gestiones"
        android:icon="@drawable/ic_action_gestiones"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_agregar_cierre"
        android:orderInCategory="100"
        android:title="@string/agregar_cierre"
        android:icon="@drawable/ic_action_agregar"
        app:showAsAction="collapseActionView" />

</menu>