<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_alpha"
        android:title="@string/buscar_cliente"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_ver_mapa"
        android:icon="@drawable/ic_action_place"
        android:orderInCategory="100"
        android:title="@string/ver_mapa"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_filtar"
        android:icon="@drawable/ic_action_filter"
        android:orderInCategory="100"
        android:title="@string/filtrar"
        app:showAsAction="always" />
</menu>